fix job title alignment

--- a/css/main.css
+++ b/css/main.css
@@ -260,6 +260,7 @@
   .about p {
     color: #888;
     font-size: 0.6em;
+    text-align: right;
     line-height: 1.25em;
     margin: 0.5em 0 0 0;
   }
